Demo site: Footer version label on smaller screen fixed.

--- a/example/src/components/Footer/styles.css
+++ b/example/src/components/Footer/styles.css
@@ -23,3 +23,21 @@ footer h1 {
 footer p {
   padding-bottom: 0.5rem;
 }
+
+@media only screen and (max-width: 425px) {
+  footer h1 {
+    font-size: 1.7rem;
+    padding-bottom: 1.7rem;
+  }
+
+  footer h1 label {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  footer h1 {
+    font-size: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}
